@@ -75,7 +75,7 @@ protected:
 
   LPDIRECT3DTEXTURE8 m_texture;      // texture that holds our rendered characters (8bit alpha only)
   unsigned int m_textureWidth;       // width of our texture
-  int m_textureRows;                 // the number of rows in our texture
+  unsigned int m_textureHeight;      // heigth of our texture
   int m_posX;                        // current position in the texture
   int m_posY;
 
